*****************************
CHANGELOG (added as of 1.8)
*****************************

2.6.1:
	updated start up instructions to be more clear.

2.6:
	streak powers(pt1):
		chance to gain certain powers when you are on a streak above 1 and below 10
		different rarities of streak powers. The rarer it is, the more powerful it is
	bug fixes:
		critical issue with when choosing to view challenger leaderboard at the end
	Timeout changes:
		all +  1 second

2.5.1:
	reworded some text and fixed some spelling errors, for clarity
	Your streak will reset after playing a game at a streak of 10
	better input support, e.g. you can now capitilse certain inputs
	coluring for certain things changed and timing improvments

2.5:
	NEW streak feature; ths is where the longer you play games without getting an answer incorrect, the more points you gain and lose
	NEW more info about the game mechs for clarity
	bug fixes:
		Inputting an invalid input during viewing a challenger leaderboard would cause it to incorrectly displayed
		Some text being incorrectly displayed
		Some sounds never being played
	Other changes:
		can no longer change difficulty after pressing play again unlesss you were in practice mode which then causes your streak to reset
		combined two screens

2.4.1:
	NEW: view how you gained and lost your points during a game of 'normal' mode
2.4:
	more sound has been implemented as well as some being removed
	unfortunatly wav files are buggy for some reason and so cant use as much sound as i want
	slight improvments to practice mode being displayed
	changed some inputs about how they are displayed
	challener starting difficulty is now set to 150, prev 50
	NEW seperate leaderboard for the top 5 scores for challenger difficulty
	bug fixes:
		challenger points resetting to default every time a new round is started

2.3.1:
	practice mode improvments:
		can now choose any difficulty
		looks smoother
		inputs when not prompted will be flushed
2.3:
	NEW practice mode: